--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 
 h2 {
     font-size: 38px;
-    color: #222222;
+    color: #420e0e;
     font-family: 'Raleway', sans-serif;
     font-weight: normal;
     margin: 0px 0 25px 0;
